# kubi-cicd-integration

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml
app/: main.py
tests/: test_main.py
