[tool.poetry]
name = "kubi-cicd-integration"
version = "0.1.0"
description = "Kubiya CI/CD Integration Repo"
authors = ["Jasmit Tarang <jaytarang92@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
uvicorn = "^0.34.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
